fix: fix alignment issue with experience containers

--- a/styles.css
+++ b/styles.css
@@ -308,7 +308,6 @@ section {
 }
 
 .details-container {
-    align-content: center;
     padding: 1.5rem;
     flex: 1;
     background: white;
@@ -381,6 +380,10 @@ h3 {
     align-items: center;
     justify-content: center; 
     margin-top: 2rem;
+}
+
+.center-project {
+    align-content: center;
 }
 
 .project-img {
